# psoff_compiler

./: .gitignore  CMakeLists.txt  LICENSE  builder.h  readme.md
benchmarks/: CMakeLists.txt  bench_mlir_structure.cpp  bench_regions.cpp  bench_scc.cpp
compiler/: CMakeLists.txt  builder.cpp  builder.h  compiler_ctx.cpp  compiler_ctx.h  compiler_types.h  operand_types.h
compiler/frontend/: debug_strings.cpp  debug_strings.h  parser.cpp  parser.h  shader_input.cpp  shader_input.h  shader_registers.h  shader_types.cpp  shader_types.h  types.h
compiler/frontend/analysis/: analysis.h  regions.cpp  regions.h  types.h
compiler/frontend/encoding/: buf.cpp  ds.cpp  exp.cpp  mimg.cpp  opcodes_table.h  sop.cpp  vop.cpp
compiler/frontend/gfx/: encoding_types.h  register_types.h
compiler/frontend/transform/: rg_to_cfg.cpp  transform.h
compiler/mlir/: CMakeLists.txt  custom.h  custom_printer.cpp  generate.ps1  wrapper.cpp
compiler/mlir/passes/: psoff_passes.h
compiler/mlir/templates/: psOff.td
compiler/util/: bitfield.h  bump_allocator.h  common.h  flags.h
dump_reader/: CMakeLists.txt  main.cpp
frontend/: debug_strings.cpp  debug_strings.h  frontend.h  shader_input.cpp  shader_input.h  shader_types.h
frontend/liverpool/: opcodes.h  opcodes.inc  types.h
frontend/parser/: debug_strings.cpp  debug_strings.h  opcodes_table.h  parser.cpp
frontend/parser/translate/: ds.cpp  encodings.h  exp.cpp  mimg.cpp  mtbuf.cpp  mubuf.cpp  smrd.cpp  sop1.cpp  sop2.cpp  sopc.cpp  sopk.cpp  sopp.cpp  translate.h  vintrp.cpp  vop1.cpp  vop2.cpp  vop3.cpp  vopc.cpp
graph_test/: CMakeLists.txt  main.cpp
include/: bitfield.h  si_ci_vi_merged_offset.h
ir/: config.h  instructions.cpp  instructions.h  ir.h  ir_test.h  types.h
recompiler/: CMakeLists.txt  builder.cpp  builder.h  logging.h  logging_default.cpp
recompiler/analysis/: debug_string.cpp  debug_strings.h  dom.h  dom_sparse.h  scc.h
recompiler/cfg/: cfg.cpp  cfg.h  debug_strings.cpp  debug_strings.h  rvsdg.cpp  rvsdg.h  types.h
recompiler/frontend/: debug_strings.cpp  debug_strings.h  frontend.h  ir_types.h  parser.cpp  parser.h  parser_types.h  shader_input.cpp  shader_input.h  shader_types.cpp  shader_types.h
recompiler/frontend/analysis/: analysis.h  cfg_builder.cpp  cfg_builder.h  evaluate.cpp  evaluate.h  evalute.cpp  regions.cpp  regions.h  transform_cfg.cpp  types.h
recompiler/frontend/parser/: debug_strings.cpp  debug_strings.h  instruction_builder.cpp  instruction_builder.h  opcodes_table.h  parser.cpp  parser.h  registers.h  shader_input.cpp  shader_registers.h  shader_types.h
recompiler/frontend/parser/translate/: ds.cpp  encodings.h  exp.cpp  instruction_builder.cpp  instruction_builder.h  mimg.cpp  mtbuf.cpp  mubuf.cpp  smrd.cpp  sop1.cpp  sop2.cpp  sopc.cpp  sopk.cpp  sopp.cpp  translate.h  vintrp.cpp  vop1.cpp  vop2.cpp  vop3.cpp  vopc.cpp
recompiler/frontend/transform/: cf_to_scf.cpp  reconstruct.cpp  rg_to_cfg.cpp  transform.h  transform_cfg.cpp
recompiler/include/: bitfield.h  checkpoint_resource.h  checkpoint_resource_fwd.h  common.h  flags.h
recompiler/ir/: blocks.cpp  blocks.h  cfg.cpp  cfg.h  config.h  debug_strings.cpp  debug_strings.h  instructions.cpp  instructions.h  instructions_userdata.h  ir.cpp  ir.h  operations.cpp  operations.h  rvsdg.cpp  rvsdg.h  types.h
recompiler/ir/cfg/: cfg.h  types.h
recompiler/ir/dialects/: dialects.h  types.h
recompiler/ir/dialects/arith/: builder.cpp  builder.h  instructions.h
recompiler/ir/dialects/core/: builder.cpp  builder.h  instructions.h
recompiler/ir/passes/: evalute.cpp  nodes.cpp  passes.h  regions.cpp
recompiler/ir/passes/util/: cfg_builder.cpp  cfg_builder.h  region_graph.cpp  region_graph.h  structured_cfg.cpp  structured_cfg.h
recompiler/transform/: restructure.cpp  transform.h
recompiler/utility/: util.h
remove/: ir_test.h  test.py
test/: main.cpp
tests/: CMakeLists.txt  shaders.h  test_alloc.cpp  test_cfg.cpp  test_dom.cpp  test_mlir_cf_to_scf.cpp  test_regions.cpp  test_restructure_to_scf.cpp  test_rgtocfg.cpp  test_scc.cpp
